[gd_scene load_steps=3 format=3 uid="uid://c7tgl30tdd7de"]

[ext_resource type="Script" path="res://UI/Secret/VisualScripting/Scripts/scripts_window.gd" id="1_6jggm"]

[sub_resource type="World3D" id="World3D_xtcb6"]

[node name="ScriptsWindow" type="Window"]
world_3d = SubResource("World3D_xtcb6")
title = "Choose Condition"
size = Vector2i(1000, 600)
script = ExtResource("1_6jggm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 83.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CameraList" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Camera"

[node name="InputList" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Input"

[node name="List" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="Camera" type="ScrollContainer" parent="VBoxContainer/List"]
layout_mode = 2
metadata/_tab_index = 0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/List/Camera"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tabs_visible = false
tab_focus_mode = 0

[node name="Conditions" type="VBoxContainer" parent="VBoxContainer/List/Camera/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Condition1" type="Button" parent="VBoxContainer/List/Camera/TabContainer/Conditions"]
layout_mode = 2
text = "If Camera Zoom"

[node name="Condition2" type="Button" parent="VBoxContainer/List/Camera/TabContainer/Conditions"]
layout_mode = 2
text = "If Camera Position"

[node name="Actions" type="VBoxContainer" parent="VBoxContainer/List/Camera/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 2
mouse_filter = 0
metadata/_tab_index = 1

[node name="Action1" type="Button" parent="VBoxContainer/List/Camera/TabContainer/Actions"]
layout_mode = 2
text = "Set Camera Zoom"

[node name="Action2" type="Button" parent="VBoxContainer/List/Camera/TabContainer/Actions"]
layout_mode = 2
text = "Set Camera Position"

[node name="Tweens" type="ScrollContainer" parent="VBoxContainer/List"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/List/Tweens"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tabs_visible = false
tab_focus_mode = 0

[node name="Conditions" type="VBoxContainer" parent="VBoxContainer/List/Tweens/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Actions" type="VBoxContainer" parent="VBoxContainer/List/Tweens/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 2
mouse_filter = 0
metadata/_tab_index = 1

[node name="Inputs" type="ScrollContainer" parent="VBoxContainer/List"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Conditions" type="VBoxContainer" parent="VBoxContainer/List/Inputs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputCondition1" type="Button" parent="VBoxContainer/List/Inputs/Conditions"]
layout_mode = 2
text = "If Input Pressed"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CameraList" to="." method="_on_camera_list_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/InputList" to="." method="_on_input_list_pressed"]
[connection signal="pressed" from="VBoxContainer/List/Camera/TabContainer/Conditions/Condition1" to="." method="_on_condition_1_pressed"]
[connection signal="pressed" from="VBoxContainer/List/Camera/TabContainer/Conditions/Condition2" to="." method="_on_condition_2_pressed"]
[connection signal="pressed" from="VBoxContainer/List/Camera/TabContainer/Actions/Action1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="VBoxContainer/List/Camera/TabContainer/Actions/Action2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="VBoxContainer/List/Inputs/Conditions/InputCondition1" to="." method="_on_input_condition_1_pressed"]
